--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <div class="container">
         <h1>Cluster Calculation</h1>
         <form id="clusterForm">
-            <label for="ratings">Ratings:</label>
-            <input type="number" id="ratings" name="ratings" step="0.01" required>
+            <label for="ratings">Classificação (1 - 5):</label>
+            <input type="number" id="ratings" name="ratings" step="0.01" min="1" max="5" required>
 
-            <label for="ram">RAM:</label>
-            <input type="number" id="ram" name="ram" step="0.01" required>
+            <label for="ram">RAM (1 - 16 GB):</label>
+            <input type="number" id="ram" name="ram" step="0.01" min="1" max="16" required>
 
-            <label for="rom">ROM:</label>
-            <input type="number" id="rom" name="rom" step="0.01" required>
+            <label for="rom">ROM (8 - 512 GB):</label>
+            <input type="number" id="rom" name="rom" step="0.01" min="8" max="512" required>
 
-            <label for="mobile_size">Mobile Size:</label>
-            <input type="number" id="mobile_size" name="mobile_size" step="0.01" required>
+            <label for="mobile_size">Mobile Size (4 - 7 inches):</label>
+            <input type="number" id="mobile_size" name="mobile_size" step="0.01" min="4" max="7" required>
 
-            <label for="primary_cam">Primary Camera:</label>
-            <input type="number" id="primary_cam" name="primary_cam" step="0.01" required>
+            <label for="primary_cam">Primary Camera (5 - 108 MP):</label>
+            <input type="number" id="primary_cam" name="primary_cam" step="0.01" min="5" max="108" required>
 
-            <label for="selfi_cam">Selfie Camera:</label>
-            <input type="number" id="selfi_cam" name="selfi_cam" step="0.01" required>
+            <label for="selfi_cam">Selfie Camera (2 - 40 MP):</label>
+            <input type="number" id="selfi_cam" name="selfi_cam" step="0.01" min="2" max="40" required>
 
-            <label for="battery">Battery Power:</label>
-            <input type="number" id="battery" name="battery" step="0.01" required>
+            <label for="battery">Battery Power (1000 - 5000 mAh):</label>
+            <input type="number" id="battery" name="battery" step="0.01" min="1000" max="5000" required>
 
-            <label for="price">Price:</label>
-            <input type="number" id="price" name="price" step="0.01" required>
+            <label for="price">Price (100 - 2000 USD):</label>
+            <input type="number" id="price" name="price" step="0.01" min="100" max="2000" required>
 
             <button type="submit">Calculate Cluster</button>
         </form>
