configracao-mensagem-cluster

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Cluster Calculation</h1>
         <form id="clusterForm">
-            <label for="ratings">Classificação (1 - 5):</label>
+            <label for="ratings">Ratings (1 - 5):</label>
             <input type="number" id="ratings" name="ratings" step="0.01" min="1" max="5" required>
 
             <label for="ram">RAM (1 - 16 GB):</label>
